# ddc-bucket-contract

./: .gitignore  Cargo.toml  DATA_STRUCTURES.md  DOC.md  Dockerfile  LICENSE  README.md  build-all.sh  build-and-deploy.sh  demo.js  deploy.js  deployments.yaml  lib.rs  package-lock.json  package.json  print_ddc_bucket.js  tests.rs
.github/workflows/: build-and-push.yml  build-and-save-contract.yml  build-contract.yml
billing/: Cargo.toml  lib.rs  tests.rs
bucket/: Cargo.toml  README.md  lib.rs  tests.rs
bucket/ddc_bucket/: account_store.rs  admin.rs  billing_account.rs  billing_flow.rs  bucket.rs  bucket_store.rs  cash.rs  contract_fee.rs  currency.rs  deal.rs  deal_store.rs  flow.rs  flow_store.rs  network_fee.rs  schedule.rs  service.rs  service_store.rs  test_utils.rs  tests.rs
bucket/ddc_bucket/account/: entity.rs  messages.rs  mod.rs  store.rs
bucket/ddc_bucket/billing/: messages.rs
bucket/ddc_bucket/bucket/: entity.rs  messages.rs  mod.rs  store.rs
bucket/ddc_bucket/buckets_perms/: mod.rs  store.rs
bucket/ddc_bucket/cdn_cluster/: entity.rs  messages.rs  mod.rs  store.rs
bucket/ddc_bucket/cdn_node/: entity.rs  messages.rs  mod.rs  store.rs
bucket/ddc_bucket/cdn_node_tier/: entity.rs  store.rs
bucket/ddc_bucket/cluster/: entity.rs  messages.rs  mod.rs  store.rs
bucket/ddc_bucket/committer/: messages.rs  mod.rs  store.rs
bucket/ddc_bucket/deal/: entity.rs  messages.rs  mod.rs  store.rs
bucket/ddc_bucket/flow/: entity.rs  store.rs
bucket/ddc_bucket/network_fee/: mod.rs
bucket/ddc_bucket/node/: entity.rs  messages.rs  mod.rs  store.rs
bucket/ddc_bucket/params/: messages.rs  mod.rs  store.rs
bucket/ddc_bucket/perm/: entity.rs  messages.rs  mod.rs  store.rs
bucket/ddc_bucket/protocol/: messages.rs  mod.rs  store.rs
bucket/ddc_bucket/service/: messages.rs  store.rs
bucket/ddc_bucket/tests/: as_cluster_manager.rs  as_gateway.rs  as_storage.rs  as_user.rs  cluster.rs  env_utils.rs  mod.rs  network.rs  node.rs  setup_utils.rs  test_account.rs  test_admin.rs  test_bucket.rs  test_cdn_node.rs  test_cluster.rs  test_contract.rs  test_currency.rs  test_network.rs  test_node.rs  topology.rs
bucket/ddc_bucket/topology/: messages.rs  mod.rs  store.rs
bucket/ddc_bucket/vnode/: entity.rs  messages.rs  store.rs
bucket/scripts/: .gitignore  config.js  init.js  metadata.json  package-lock.json  package.json
cluster/: Cargo.toml  lib.rs  tests.rs
cns/: Cargo.toml  lib.rs
cns/cns/: contract_fee.rs
cns/cns/cash/: entity.rs  messages.rs
cns/cns/names/: entity.rs  messages.rs  mod.rs  store.rs
cns/cns/registry/: messages.rs
cns/cns/tests/: env_utils.rs  mod.rs  test_contract.rs
ddc_nft_registry/: Cargo.toml  lib.rs
ddc_nft_registry/ddc_nft_registry/: contract_fee.rs
ddc_nft_registry/ddc_nft_registry/attachment/: entity.rs  messages.rs  mod.rs  store.rs
ddc_nft_registry/ddc_nft_registry/cash/: entity.rs  messages.rs  mod.rs
ddc_nft_registry/ddc_nft_registry/tests/: env_utils.rs  test_contract.rs
deployer/: index.js  package.json
deployer/sdk/: abiRegistry.js  constants.js  contractRegistry.js  index.js
ink-doc-gen/: README.md  index.js  package.json  template.handlebars
js-dev/: README.md  package.json
js-dev/src/: contractRegistry.js  polkadotWrappers.js
js-dev/src/abi/: ddc_bucket.json
js-dev/src/bucket/: ddcBucketQuery.js
payments/: Cargo.toml  lib.rs  tests.rs
registry/: Cargo.toml  lib.rs  tests.rs
scripts/: .gitignore  README.md  package.json
scripts/ddc-setup/: ddcBucketSetup.js  ddcConfig.js  ddcSetup.js
scripts/deployment/: ddcBucketDeploy.js  ddcNftRegistryDeploy.js  deploy.js
scripts/examples/: ddcBucketDemo.js  ddcBucketPrint.js  ddcNftRegistryDemo.js
scripts/sdk/: package.json
scripts/sdk/src/: abiRegistry.js  contractRegistry.js  deploymentRegistry.js  index.js  polkadotWrappers.js
sdk/: README.md  package.json
sdk/src/: abiRegistry.js  ddcBucket.js  ddcBucketQuery.js  deployments.js  index.js
sdk/src/abi/: ddc_bucket.json  ddc_nft_registry.json
sdk/src/config/: index.js
(+5 files in other folders)
