[package]
name = "ddc_bucket"
version = "0.5.2"
authors = ["Aurélien Nicolas <aurel@cere.network>"]
edition = "2021"
description = "DDC v2 Smart Contracts -- Orchestrate the network around clusters and buckets"
license = "Apache-2.0"

[dependencies]
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

ink = { version = "4.1.0", default-features = false }
ink_primitives = { version = "4.1.0", default-features = false }
ink_metadata = { version = "4.1.0", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "4.1.0", default-features = false }
ink_storage = { version = "4.1.0", default-features = false }
ink_prelude = { version = "4.1.0", default-features = false }
# Transitive dependencies necessary to fix the version.
ink_allocator = { version = "4.1.0", default-features = false, optional = true }

serde = { version = "1.0.136", optional = true }
serde_json = { version = "1.0.79", optional = true }
more-asserts = { version = "0.3.0" }

openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts", version = "~3.0.0", default-features = false }

[lib]
name = "ddc_bucket"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "scale/std",
    "scale-info/std",
    "ink/std",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "ink_prelude/std",
    # Transitive dependencies.
    "ink_allocator/std",

    # For tests
    "serde",
    "serde_json",
]
ink-as-dependency = []


# Needed until https://github.com/paritytech/ink/issues/364 is resolved.
[profile.release]
overflow-checks = false
[profile.dev]
overflow-checks = false
