[package]
name = "ddc_nft_registry"
version = "0.5.2"
authors = ["Aurélien Nicolas <aurel@cere.network>", "Anton Volk <anton.volk@cere.io>"]
edition = "2021"

[dependencies]
scale = { package = "parity-scale-codec", version = "=3.1.2", default-features = false, features = ["derive"] }
scale-info = { version = "=2.0.1", default-features = false, features = ["derive"], optional = true }

ink_primitives = { version = "3.4.0", default-features = false }
ink_metadata = { version = "3.4.0", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.4.0", default-features = false }
ink_storage = { version = "3.4.0", default-features = false }
ink_lang = { version = "3.4.0", default-features = false }
ink_prelude = { version = "3.4.0", default-features = false }

# Transitive dependencies necessary to fix the version.
ink_allocator = { version = "3.4.0", default-features = false, optional = true }
ink_lang_codegen = { version = "3.4.0", default-features = false, optional = true }
ink_storage_derive = { version = "3.4.0", default-features = false, optional = true }
ink_lang_ir = { version = "3.4.0", default-features = false, optional = true }
ink_lang_macro = { version = "3.4.0", default-features = false, optional = true }

serde = { version = "1.0.136", optional = true }
serde_json = { version = "1.0.79", optional = true }

[lib]
name = "ddc_nft_registry"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
    # Used for ABI generation.
    "rlib",
]

[features]
default = ["std"]
std = [
    "scale/std",
    "scale-info/std",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "ink_prelude/std",
    # Transitive dependencies.
    "ink_allocator/std",
    "ink_lang_codegen/std",
    #"ink_storage_derive/std",
    "ink_lang_ir/std",
    "ink_lang_macro/std",

    # For tests
    "serde",
    "serde_json",
]
ink-as-dependency = []


# Needed until https://github.com/paritytech/ink/issues/364 is resolved.
[profile.release]
overflow-checks = false
[profile.dev]
overflow-checks = false
